testdata/baselines/reference/submodule/compiler/unusedTypeParameterInMethod4.errors.txt
unusedTypeParameterInMethod4.ts(2,14): error TS6196: 'X' is declared but never used.


==== unusedTypeParameterInMethod4.ts (1 errors) ====
    class A {
        public f1<X>() {
                 ~~~
!!! error TS6196: 'X' is declared but never used.
    
        }
    }